Task: add kontent.ai call to get the details

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,4 +9,4 @@ block layout-content
             by #{author}
 
         img(src = heroimage ).imgcontainer
-        div #{description}
+        div.longarticle !{description}
