--- a/public/style.css
+++ b/public/style.css
@@ -1,16 +1,22 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:800|Merriweather+Sans|Share+Tech+Mono");
 
-html,
-body,
 #root {
   height: 100%;
   width: 100%;
   padding: 0 20px;
+  display: flex;
+  flex-direction: column;
 }
 
+#figure{
+  margin-left: 0px;
+  margin-right: 0px;
+}
+ 
+.View{
+  padding: 0 30px;
+}
 body {
-  margin: 0;
-  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -28,28 +34,22 @@ h3 {
   margin: 0;
   color: #2a3747;
 }
+.imgcontainer{
+  width: 70%;
+  height: 70%;
+}
 
 h1 {
   font-size: 40px;
   text-align: center;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-  user-select: none;
-}
-
-#root {
-  display: flex;
-  flex-direction: column;
-}
-.imgcontainer{
-  padding: 10px 0;
-}
 .article{
-  width: 700px;
-  margin: 0 auto;
+  margin: 0 auto;  
 }
-
+.summary{
+  width: 90%
+}
+.longarticle{
+  width: 90%
+}
