Task: missed index

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block layout-content
   div.View
     h1.Banner #{maintitle}
     div.article 
-        p #{summary} 
+        p.summary #{summary} 
         p
             by #{author}
 
