--- a/public/style.css
+++ b/public/style.css
@@ -13,9 +13,6 @@
   margin-right: 0px;
 }
  
-.View{
-  padding: 0 30px;
-}
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -24,6 +21,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
+
+.View{
+  padding: 0 30px;
+}
+
 
 h1,
 h2,
@@ -34,9 +36,24 @@ h3 {
   margin: 0;
   color: #2a3747;
 }
+
+.errorpage{
+  background-image: url('error.jpg');
+  padding: 20%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-size: contain;
+}
+
 .imgcontainer{
   width: 70%;
   height: 70%;
+}
+
+.centerdiv{
+  text-align: center;
+  width: 100%;
 }
 
 h1 {
